# TCP-IP-Xela-Unity

./: README.md  ReadmePCSalta  camera.py  socket_prog.py  socket_to_ar.py  xela_client.py
franka_example_controllers/: ReadmePCSalta  cartesian_velocity_example_controller.cpp  cartesian_velocity_example_controller.h
xela_server/: CMakeLists.txt  package.xml
xela_server/bagfiles/: xela_calibration.bag
xela_server/scripts/: sending.cpp  socket_prog.py
